[project]
name = "lbu_knowledge_base"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.135.1",
    "flagembedding>=1.3.5",
    "grandalf>=0.8",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "mineru-kie-sdk>=0.1.1",
    "minio>=7.2.20",
    "modelscope>=1.35.1",
    "numpy>=1.21,<2.0",
    "pandas>=2.2.0,<3.0.0",
    "pymilvus[model]>=2.6.10",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "regex>=2026.2.28",
    # --- 核心修改：使用 == 强制锁定版本，防止 uv 自动升级 ---
    #    "torch==2.1.2",
    #    "torchaudio==2.1.2",
    #    "torchvision==0.16.2",
    "onnxruntime==1.16.3",
    # -----------------------------------------------
    "uvicorn>=0.42.0",
    "transformers>=4.57.6",
    "openai-agents>=0.4.2",
    "requests>=2.32.5",
    "langchain-mcp-adapters>=0.2.2",
    "dashscope>=1.25.17",
    "datasets>=2.14,<3.0",
]

# 限制 uv 只解析当前 macOS 平台，避免跨平台解析报错
[tool.uv]
environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]

# 国内清华镜像加速（作为默认源）
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# 为 PyTorch 单独指定官方 CPU 源
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
